--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -7,7 +7,8 @@
   "overrides": [],
   "parserOptions": {
     "ecmaVersion": "latest",
-    "sourceType": "module"
+    "sourceType": "module",
+    "project": "./tsconfig.json"
   },
   "plugins": ["react"],
   "rules": {}
