--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "nx build",
     "test": "nx test",
     "foo": "echo \"Hello World!\"",
+    "lint": "eslint",
     "prepare": "husky install"
   },
   "private": true,
@@ -14,9 +15,13 @@
     "@reduxjs/toolkit": "^1.9.3",
     "@types/react-redux": "^7.1.25",
     "@types/styled-components": "^5.1.26",
+    "i18next": "^22.4.13",
+    "i18next-browser-languagedetector": "^7.0.1",
+    "i18next-http-backend": "^2.2.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.43.8",
+    "react-i18next": "^12.2.0",
     "react-router-dom": "^6.9.0",
     "styled-components": "^5.3.9"
   },
@@ -31,6 +36,7 @@
     "@types/node": "18.11.9",
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.9",
+    "@types/react-i18next": "^8.1.0",
     "@typescript-eslint/eslint-plugin": "^5.57.0",
     "@typescript-eslint/parser": "^5.0.0",
     "@vitejs/plugin-react": "3.0.1",
