--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,14 +1,23 @@
 {
+  "overrides": [
+    {
+      "files": ["*.ts", "*.tsx"],
+      "extends": ["airbnb", "airbnb-typescript"]
+    }
+  ],
+
   "env": {
     "browser": true,
     "es2021": true
   },
   "extends": ["airbnb", "airbnb-typescript"],
-  "overrides": [],
+
+  "parser": "@typescript-eslint/parser",
   "parserOptions": {
     "ecmaVersion": "latest",
     "sourceType": "module",
-    "project": "./tsconfig.json"
+    "project": "tsconfig.json",
+    "tsconfigRootDir": "_dirname"
   },
   "plugins": ["react"],
   "rules": {}
