--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.9",
     "@types/react-i18next": "^8.1.0",
+    "@types/react-router": "^5.1.20",
     "@typescript-eslint/eslint-plugin": "^5.57.0",
     "@typescript-eslint/parser": "^5.0.0",
     "@vitejs/plugin-react": "3.0.1",
