--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "react-hook-form": "^7.43.8",
     "react-i18next": "^12.2.0",
     "react-router-dom": "^6.9.0",
-    "styled-components": "^5.3.9"
+    "styled-components": "^5.3.9",
+    "typeface-roboto": "^1.1.13"
   },
   "devDependencies": {
     "@nrwl/eslint-plugin-nx": "15.5.3",
