feat: add phone input component

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.43.8",
     "react-i18next": "^12.2.0",
+    "react-phone-input-2": "^2.15.1",
     "react-router-dom": "^6.9.0",
     "styled-components": "^5.3.9",
     "typeface-roboto": "^1.1.13",
