--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   },
   "private": true,
   "dependencies": {
+    "@hookform/resolvers": "^3.0.0",
     "@mui/material": "^5.11.15",
+    "@react-oauth/google": "^0.9.0",
     "@reduxjs/toolkit": "^1.9.3",
     "@types/react-redux": "^7.1.25",
     "@types/styled-components": "^5.1.26",
