--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
   },
   "private": true,
   "dependencies": {
+    "@hookform/resolvers": "^3.0.0",
     "@reduxjs/toolkit": "^1.9.3",
     "@types/react-redux": "^7.1.25",
     "@types/styled-components": "^5.1.26",
+    "cities-list": "^1.0.3",
+    "compact-timezone-list": "^1.0.6",
     "i18next": "^22.4.13",
     "i18next-browser-languagedetector": "^7.0.1",
     "i18next-http-backend": "^2.2.0",
@@ -23,7 +26,10 @@
     "react-hook-form": "^7.43.8",
     "react-i18next": "^12.2.0",
     "react-router-dom": "^6.9.0",
-    "styled-components": "^5.3.9"
+    "react-select": "^5.7.2",
+    "styled-components": "^5.3.9",
+    "timezones-list": "^3.0.2",
+    "yup": "^1.0.2"
   },
   "devDependencies": {
     "@nrwl/eslint-plugin-nx": "15.5.3",
