--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-hook-form": "^7.43.8",
     "react-i18next": "^12.2.0",
     "react-phone-input-2": "^2.15.1",
+    "react-redux": "^8.0.5",
     "react-router-dom": "^6.9.0",
     "styled-components": "^5.3.9",
     "typeface-roboto": "^1.1.13",
