--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "private": true,
   "dependencies": {
     "@emotion/styled": "^11.10.6",
+    "@esbuild/darwin-x64": "^0.17.15",
     "@hookform/resolvers": "^3.0.0",
     "@mui/material": "^5.11.15",
     "@react-oauth/google": "^0.9.0",
@@ -32,6 +33,7 @@
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.10.0",
     "react-select": "^5.7.2",
+    "react-toastify": "^9.1.2",
     "styled-components": "^5.3.9",
     "timezones-list": "^3.0.2",
     "typeface-roboto": "^1.1.13",
