--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-router-dom": "^6.10.0",
     "react-select": "^5.7.2",
     "react-toastify": "^9.1.2",
+    "redux-persist": "^6.0.0",
     "styled-components": "^5.3.9",
     "timezones-list": "^3.0.2",
     "typeface-roboto": "^1.1.13",
