--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/styled-components": "^5.1.26",
     "cities-list": "^1.0.3",
     "compact-timezone-list": "^1.0.6",
+    "date-fns": "^2.29.3",
     "i18next": "^22.4.13",
     "i18next-browser-languagedetector": "^7.0.1",
     "i18next-http-backend": "^2.2.0",
