fixes, feat: sidebar, help, edit doctor profile

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,9 +6,9 @@
     "allowSyntheticDefaultImports": true,
     "strict": true,
     "types": [],
-    "baseUrl": "src",
+    "baseUrl": "src"
   },
-  "include":["src"],
+  "include": ["src"],
   "files": [],
   "references": [
     {
