--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -39,6 +39,11 @@
         "parser": "@typescript-eslint/parser",
         "project": "tsconfig.app.json",
         "sourceType": "module"
+      },
+      "rules": {
+        "no-param-reassign": "off",
+        "consistent-return": "off",
+        "@typescript-eslint/no-shadow": "off"
       }
     }
   ]
