feat: add main functionality of scheduler and run linter

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "i18next-browser-languagedetector": "^7.0.1",
     "i18next-http-backend": "^2.2.0",
     "react": "18.2.0",
+    "react-big-calendar": "^1.6.9",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.43.8",
     "react-i18next": "^12.2.0",
@@ -51,6 +52,7 @@
     "@types/jest": "^29.5.0",
     "@types/node": "18.11.9",
     "@types/react": "18.0.25",
+    "@types/react-big-calendar": "^1.6.3",
     "@types/react-dom": "18.0.9",
     "@types/react-i18next": "^8.1.0",
     "@types/react-router": "^5.1.20",
