--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "styled-components": "^5.3.9",
     "timezones-list": "^3.0.2",
     "typeface-roboto": "^1.1.13",
+    "uuid": "^9.0.0",
     "yup": "^1.0.2"
   },
   "devDependencies": {
@@ -57,6 +58,7 @@
     "@types/react-i18next": "^8.1.0",
     "@types/react-router": "^5.1.20",
     "@types/redux-persist": "^4.3.1",
+    "@types/uuid": "^9.0.1",
     "@typescript-eslint/eslint-plugin": "^5.57.1",
     "@typescript-eslint/parser": "^5.57.1",
     "@vitejs/plugin-react": "3.0.1",
