--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "styled-components": "^5.3.9",
     "timezones-list": "^3.0.2",
     "typeface-roboto": "^1.1.13",
+    "vite-plugin-svgr": "^2.4.0",
     "yup": "^1.0.2"
   },
   "devDependencies": {
