--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -43,7 +43,8 @@
       "rules": {
         "no-param-reassign": "off",
         "consistent-return": "off",
-        "@typescript-eslint/no-shadow": "off"
+        "@typescript-eslint/no-shadow": "off",
+        "prefer-rest-params": "off"
       }
     }
   ]
