--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@mui/x-date-pickers": "^6.0.4",
     "@react-oauth/google": "^0.9.0",
     "@reduxjs/toolkit": "^1.9.3",
+    "@types/react-content-loader": "^4.0.0",
     "@types/react-redux": "^7.1.25",
     "@types/styled-components": "^5.1.26",
     "axios": "^1.3.5",
@@ -28,6 +29,7 @@
     "i18next-browser-languagedetector": "^7.0.1",
     "i18next-http-backend": "^2.2.0",
     "react": "18.2.0",
+    "react-content-loader": "^6.2.1",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.43.8",
     "react-i18next": "^12.2.0",
