--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@emotion/styled": "^11.10.6",
     "@hookform/resolvers": "^3.0.0",
+    "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.11.15",
     "@mui/x-date-pickers": "^6.0.4",
     "@react-oauth/google": "^0.9.0",
