--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@mui/x-date-pickers": "^6.0.4",
     "@react-oauth/google": "^0.9.0",
     "@reduxjs/toolkit": "^1.9.3",
+    "@types/react-avatar-editor": "^13.0.0",
     "@types/react-redux": "^7.1.25",
     "@types/styled-components": "^5.1.26",
     "axios": "^1.3.5",
@@ -28,6 +29,7 @@
     "i18next-browser-languagedetector": "^7.0.1",
     "i18next-http-backend": "^2.2.0",
     "react": "18.2.0",
+    "react-avatar-editor": "^13.0.0",
     "react-big-calendar": "^1.6.9",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.43.8",
@@ -41,8 +43,8 @@
     "styled-components": "^5.3.9",
     "timezones-list": "^3.0.2",
     "typeface-roboto": "^1.1.13",
-    "vite-plugin-svgr": "^2.4.0",
     "uuid": "^9.0.0",
+    "vite-plugin-svgr": "^2.4.0",
     "yup": "^1.0.2"
   },
   "devDependencies": {
