--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react": "18.2.0",
     "react-big-calendar": "^1.6.9",
     "react-dom": "18.2.0",
+    "react-highlight-words": "^0.20.0",
     "react-hook-form": "^7.43.8",
     "react-i18next": "^12.2.0",
     "react-phone-input-2": "^2.15.1",
@@ -41,8 +42,8 @@
     "styled-components": "^5.3.9",
     "timezones-list": "^3.0.2",
     "typeface-roboto": "^1.1.13",
-    "vite-plugin-svgr": "^2.4.0",
     "uuid": "^9.0.0",
+    "vite-plugin-svgr": "^2.4.0",
     "yup": "^1.0.2"
   },
   "devDependencies": {
@@ -58,6 +59,7 @@
     "@types/react": "18.0.25",
     "@types/react-big-calendar": "^1.6.3",
     "@types/react-dom": "18.0.9",
+    "@types/react-highlight-words": "^0.16.4",
     "@types/react-i18next": "^8.1.0",
     "@types/react-router": "^5.1.20",
     "@types/redux-persist": "^4.3.1",
