--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.43.8",
     "react-i18next": "^12.2.0",
+    "react-loader-spinner": "^5.3.4",
     "react-phone-input-2": "^2.15.1",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.10.0",
@@ -41,8 +42,8 @@
     "styled-components": "^5.3.9",
     "timezones-list": "^3.0.2",
     "typeface-roboto": "^1.1.13",
-    "vite-plugin-svgr": "^2.4.0",
     "uuid": "^9.0.0",
+    "vite-plugin-svgr": "^2.4.0",
     "yup": "^1.0.2"
   },
   "devDependencies": {
