--- a/package.json
+++ b/package.json
@@ -13,11 +13,18 @@
   "private": true,
   "dependencies": {
     "@emotion/styled": "^11.10.6",
+    "@fullcalendar/common": "^5.11.4",
+    "@fullcalendar/core": "^6.1.6",
+    "@fullcalendar/daygrid": "^6.1.6",
+    "@fullcalendar/list": "^6.1.6",
+    "@fullcalendar/react": "^6.1.6",
+    "@fullcalendar/timegrid": "^6.1.6",
     "@hookform/resolvers": "^3.0.0",
     "@mui/material": "^5.11.15",
     "@mui/x-date-pickers": "^6.0.4",
     "@react-oauth/google": "^0.9.0",
     "@reduxjs/toolkit": "^1.9.3",
+    "@types/fullcalendar": "^3.8.0",
     "@types/react-redux": "^7.1.25",
     "@types/styled-components": "^5.1.26",
     "axios": "^1.3.5",
