--- a/package.json
+++ b/package.json
@@ -23,12 +23,14 @@
     "axios": "^1.3.5",
     "cities-list": "^1.0.3",
     "compact-timezone-list": "^1.0.6",
-    "date-fns": "^2.29.3",
+    "date-fns": "^2.30.0",
     "i18next": "^22.4.13",
     "i18next-browser-languagedetector": "^7.0.1",
     "i18next-http-backend": "^2.2.0",
     "react": "18.2.0",
     "react-big-calendar": "^1.6.9",
+    "react-datepicker": "^4.11.0",
+    "react-day-picker": "^8.7.1",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.43.8",
     "react-i18next": "^12.2.0",
@@ -41,8 +43,8 @@
     "styled-components": "^5.3.9",
     "timezones-list": "^3.0.2",
     "typeface-roboto": "^1.1.13",
-    "vite-plugin-svgr": "^2.4.0",
     "uuid": "^9.0.0",
+    "vite-plugin-svgr": "^2.4.0",
     "yup": "^1.0.2"
   },
   "devDependencies": {
