--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react": "18.2.0",
     "react-avatar-editor": "^13.0.0",
     "react-big-calendar": "^1.6.9",
+    "react-day-picker": "^8.7.1",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.43.8",
     "react-i18next": "^12.2.0",
