--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/react-avatar-editor": "^13.0.0",
     "@types/react-redux": "^7.1.25",
     "@types/styled-components": "^5.1.26",
+    "@zoomus/websdk": "^2.12.0",
     "axios": "^1.3.5",
     "cities-list": "^1.0.3",
     "compact-timezone-list": "^1.0.6",
