--- a/package.json
+++ b/package.json
@@ -19,17 +19,22 @@
     "@mui/x-date-pickers": "^6.0.4",
     "@react-oauth/google": "^0.9.0",
     "@reduxjs/toolkit": "^1.9.3",
+    "@types/npm": "^7.19.0",
     "@types/react-avatar-editor": "^13.0.0",
     "@types/react-redux": "^7.1.25",
     "@types/styled-components": "^5.1.26",
+    "@zoom/videosdk": "^1.7.5",
     "@zoomus/websdk": "^2.12.0",
     "axios": "^1.3.5",
     "cities-list": "^1.0.3",
+    "coi-serviceworker": "^0.1.6",
     "compact-timezone-list": "^1.0.6",
     "date-fns": "^2.29.3",
+    "i": "^0.3.7",
     "i18next": "^22.4.13",
     "i18next-browser-languagedetector": "^7.0.1",
     "i18next-http-backend": "^2.2.0",
+    "jsrsasign": "^10.8.6",
     "react": "18.2.0",
     "react-avatar-editor": "^13.0.0",
     "react-big-calendar": "^1.6.9",
