--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,52 +1,18 @@
-// {
-//   "overrides": [
-//     {
-//       "files": ["*.ts", "*.tsx"],
-//       "extends": ["airbnb", "airbnb-typescript"]
-//     }
-//   ],
-
-//   "env": {
-//     "browser": true,
-//     "es2021": true
-//   },
-//   "extends": ["airbnb", "airbnb-typescript"],
-
-//   "parser": "@typescript-eslint/parser",
-//   "parserOptions": {
-//     "ecmaVersion": "latest",
-//     "sourceType": "module",
-//     "project": "tsconfig.json",
-//     "tsconfigRootDir": "_dirname"
-//   },
-//   "plugins": ["react"],
-//   "rules": {}
-// }
-
 {
-  "parser": "@typescript-eslint/parser",
-  "plugins": ["@typescript-eslint", "prettier"],
+  "extends": ["plugin:@nx/react"],
+  "root": true,
+  "ignorePatterns": ["!**/*"],
+  "plugins": ["@nx"],
   "overrides": [
     {
       "files": ["*.ts", "*.tsx"],
-      "extends": [
-        "airbnb-base",
-        "airbnb-typescript/base",
-        "plugin:@typescript-eslint/eslint-recommended",
-        "plugin:@typescript-eslint/recommended"
-      ],
-      "parserOptions": {
-        "parser": "@typescript-eslint/parser",
-        "project": "tsconfig.app.json",
-        "sourceType": "module"
-      },
-      "rules": {
-        "import/prefer-default-export": "off",
-        "no-param-reassign": "off",
-        "consistent-return": "off",
-        "@typescript-eslint/no-shadow": "off",
-        "prefer-rest-params": "off"
-      }
+      "extends": ["plugin:@nx/typescript"],
+      "rules": {}
+    },
+    {
+      "files": ["*.js", "*.jsx"],
+      "extends": ["plugin:@nx/javascript"],
+      "rules": {}
     }
   ]
 }
