--- a/package.json
+++ b/package.json
@@ -25,10 +25,10 @@
     "@mui/x-date-pickers": "^6.0.4",
     "@react-oauth/google": "^0.9.0",
     "@reduxjs/toolkit": "^1.9.3",
-    "@types/npm": "^7.19.0",
     "@types/fullcalendar": "^3.8.0",
-    "@types/react-content-loader": "^4.0.0",
+    "@types/npm": "^7.19.0",
     "@types/react-avatar-editor": "^13.0.0",
+    "@types/react-content-loader": "^4.0.0",
     "@types/react-redux": "^7.1.25",
     "@types/styled-components": "^5.1.26",
     "@zoom/videosdk": "^1.7.5",
@@ -44,9 +44,9 @@
     "i18next-http-backend": "^2.2.0",
     "jsrsasign": "^10.8.6",
     "react": "18.2.0",
-    "react-content-loader": "^6.2.1",
     "react-avatar-editor": "^13.0.0",
     "react-big-calendar": "^1.6.9",
+    "react-content-loader": "^6.2.1",
     "react-datepicker": "^4.11.0",
     "react-day-picker": "^8.7.1",
     "react-dom": "18.2.0",
@@ -60,6 +60,8 @@
     "react-select": "^5.7.2",
     "react-toastify": "^9.1.2",
     "redux-persist": "^6.0.0",
+    "socket.io": "^4.6.1",
+    "socket.io-client": "^4.6.1",
     "styled-components": "^5.3.9",
     "timezones-list": "^3.0.2",
     "typeface-roboto": "^1.1.13",
