--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "react-toastify": "^9.1.2",
     "redux-persist": "^6.0.0",
     "sass": "^1.62.1",
+    "socket.io-client": "^4.6.1",
     "styled-components": "5.3.6",
     "timezones-list": "^3.0.2",
     "typeface-roboto": "^1.1.13",
