--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "i18next-browser-languagedetector": "^7.0.1",
     "i18next-http-backend": "^2.2.0",
     "jsrsasign": "^10.8.6",
+    "moment": "^2.29.4",
     "react": "18.2.0",
     "react-avatar-editor": "^13.0.0",
     "react-big-calendar": "^1.6.9",
@@ -59,9 +60,9 @@
     "react-select": "^5.7.2",
     "react-toastify": "^9.1.2",
     "redux-persist": "^6.0.0",
+    "sass": "^1.62.1",
     "socket.io": "^4.6.1",
     "socket.io-client": "^4.6.1",
-    "sass": "^1.62.1",
     "styled-components": "5.3.6",
     "timezones-list": "^3.0.2",
     "typeface-roboto": "^1.1.13",
