--- a/package.json
+++ b/package.json
@@ -26,9 +26,9 @@
     "@types/fullcalendar": "^3.8.0",
     "@types/npm": "^7.19.0",
     "@types/react-avatar-editor": "^13.0.0",
-    "@types/react-avatar-editor": "^13.0.0",
     "@types/react-content-loader": "^4.0.0",
     "@types/react-redux": "^7.1.25",
+    "@types/react-router-dom": "^5.3.3",
     "@types/styled-components": "^5.1.26",
     "@zoom/videosdk": "^1.7.5",
     "@zoomus/websdk": "^2.12.0",
@@ -36,6 +36,7 @@
     "cities-list": "^1.0.3",
     "coi-serviceworker": "^0.1.6",
     "compact-timezone-list": "^1.0.6",
+    "core-util-is": "^1.0.3",
     "date-fns": "^2.30.0",
     "i": "^0.3.7",
     "i18next": "^22.4.13",
@@ -51,18 +52,17 @@
     "react-dom": "18.2.0",
     "react-highlight-words": "^0.20.0",
     "react-hook-form": "^7.43.8",
-    "react-i18next": "^12.2.0",
+    "react-i18next": "^12.3.1",
     "react-is": "18.2.0",
     "react-loader-spinner": "^5.3.4",
     "react-phone-input-2": "^2.15.1",
     "react-redux": "^8.0.5",
-    "react-router-dom": "^6.10.0",
+    "react-router-dom": "^6.11.2",
     "react-select": "^5.7.2",
     "react-toastify": "^9.1.2",
     "redux-persist": "^6.0.0",
-    "socket.io": "^4.6.1",
-    "socket.io-client": "^4.6.1",
     "sass": "^1.62.1",
+    "socket.io": "^4.6.1",
     "socket.io-client": "^4.6.1",
     "styled-components": "5.3.6",
     "timezones-list": "^3.0.2",
