--- a/package.json
+++ b/package.json
@@ -42,9 +42,11 @@
     "react-datepicker": "^4.11.0",
     "react-day-picker": "^8.7.1",
     "react-dom": "18.2.0",
+    "react-dropzone": "^14.2.3",
     "react-highlight-words": "^0.20.0",
     "react-hook-form": "^7.43.8",
     "react-i18next": "^12.2.0",
+    "react-icons": "^4.9.0",
     "react-is": "18.2.0",
     "react-loader-spinner": "^5.3.4",
     "react-phone-input-2": "^2.15.1",
