--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@web-wizards-fe/source",
+  "name": "@web-smart-dc-fe/source",
   "version": "0.0.0",
   "license": "MIT",
   "scripts": {
